crates/aranya-policy-compiler/tests/data/type_errors/match_option_mixed_types_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: string
  |
3 |         Some(42) => {}
  |              -- expected because of this
4 |         Some("foo") => {}
  |              ^^^^^ expected `int` but found `string`
